--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# my stuff
+/python/bin
+/python/include
+/python/lib
 
 # dependencies
 /node_modules
