--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "morgan": "^1.9.1",
     "papaparse": "^5.1.1",
     "react": "^16.13.0",
+    "react-data-table-component": "^6.3.1",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
